[package]
name = "rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mongodb = "2.0.0-beta.3"
serde = "1.0.129"
serde_yaml = "0.8.20"
serde_json = "1.0.67"
anyhow = "1.0.43"
tokio = "1.10.1"
hyper = "0.14.12"
futures = "0.3.16"
chrono = "0.4.19"